fix  overflow hidding picker

--- a/src/app/modules/shared/card/components/card/card.component.scss
+++ b/src/app/modules/shared/card/components/card/card.component.scss
@@ -1,5 +1,6 @@
 :host {
 	background: var(--color-bg);
 	display: block;
+	overflow: hidden;
 	border-radius: var(--border-radius);
 }
