--- a/src/app/theming/cards.scss
+++ b/src/app/theming/cards.scss
@@ -2,6 +2,7 @@
 .card{
 	@extend .z-2;
 	display: block;
+	overflow: hidden;
 	padding: var(--spacing-default);
 	margin: var(--spacing-xl);
 	border-radius: var(--border-radius);
